--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="./icons/cosmetic.png">
-    <title>Kal Hans</title>
+    <title>KALHANS</title>
 </head>
 <body class="page__content">
     <div>
-       <a href="#" class="promo_section">Get 10% Off Your First Order with Code WELCOME10</a> 
+       <a href="#" class="promo_section animate__animated animate__flash wow">Get 10% Off Your First Order with Code WELCOME10</a> 
     </div>
 
     <header class="main_header">
@@ -37,7 +38,7 @@
 
     <main class="page__main">
           <img src="./images/main_bg.png" alt="" class="main_bg">
-          <button class="new-collection">Shop NEW Summer Collection!</button>  
+          <button class="new-collection animate__animated animate__fadeInLeft wow">Shop NEW Summer Collection!</button>  
         
           <section class="comfort">
             <p class="comfort__title">
@@ -96,7 +97,7 @@
           </section>
 
           <section class="deserve deserve-block">
-            <div class="deserve-block block-one">
+            <div class="deserve-block block-one animate__animated animate__fadeInLeft wow">
                 <p class="block-one__title">Your Skin Deserves The Best!</p>
                 <p class="block-one__text">You have only one body and it deserves the best! Kal Hans brings you the highest quality, nutrient rich natural ingredients to elevate your skincare routine and give you glowing skin. Because the best makeup is NO makeup.</p>
                 <button class="block-one__button">GET GLOWING</button>
@@ -120,10 +121,10 @@
           </section>
 
 
-          <section class="newsletter">
-            <div class="newsletter__title">KH Newsletter</div>
-            <div class="newsletter__text">Sign up to our newsletter and we’ll keep you up to date with the latest products, skincare news and exclusive discounts!</div>
-            <form action="#" class="form-newsletter">
+          <section class="newsletter ">
+            <div class="newsletter__title animate__animated animate__fadeInLeft wow">KH Newsletter</div>
+            <div class="newsletter__text animate__animated animate__fadeInLeft wow">Sign up to our newsletter and we’ll keep you up to date with the latest products, skincare news and exclusive discounts!</div>
+            <form action="#" class="form-newsletter animate__animated animate__fadeInLeft wow">
                 <input type="text" class="form-newsletter__input" placeholder="Enter your email...">
                 <button class="form-newsletter__button">Subscribe</button>
             </form>
@@ -131,8 +132,8 @@
 
           <section class="deserve deserve-block">
             <div class="deserve-block block-one block-one--grey_bg">
-                <p class="block-one__title">Our Story</p>
-                <p class="block-one__text">Kal Hans is not a brand that strives for perfection but one that strives for the continual betterment, growth and confidence in one’s own skin. After meeting with a severe accident in New York founder Lisa D'Mello created Kal Hans</p>
+                <p class="block-one__title animate__animated animate__fadeInLeft wow">Our Story</p>
+                <p class="block-one__text animate__animated animate__fadeInLeft wow">Kal Hans is not a brand that strives for perfection but one that strives for the continual betterment, growth and confidence in one’s own skin. After meeting with a severe accident in New York founder Lisa D'Mello created Kal Hans</p>
                 <button class="block-one__button">Read more</button>
             </div>
 
@@ -144,7 +145,7 @@
         <section class="naturalist">
             <div class="naturalist_main">
                 <div class="naturalist__blocks">
-                    <div class="naturalist__block">
+                    <div class="naturalist__block animate__animated animate__fadeInLeft wow">
                         <img class="naturalist__block__img" src="./images/low_img1.png" alt="plate_picture">
                         <p class="naturalist__block__title">Food For Your Skin: A Diet To Achieve Glowing Skin For Your Skin Type</p>
                         <p class="naturalist__block__date">Jan 08, 2021</p>
@@ -153,7 +154,7 @@
                         <a href="#" class="naturalist__block__more">Read more</a>
                     </div>
 
-                    <div class="naturalist__block">
+                    <div class="naturalist__block animate__animated animate__fadeInDown wow">
                         <img class="naturalist__block__img" src="./images/low_img2.png" alt="plate_picture">
                         <p class="naturalist__block__title">Food For Your Skin: A Diet To Achieve Glowing Skin For Your Skin Type</p>
                         <p class="naturalist__block__date">Sep 07, 2020</p>
@@ -162,7 +163,7 @@
                         <a href="#" class="naturalist__block__more">Read more</a>
                     </div>
 
-                    <div class="naturalist__block">
+                    <div class="naturalist__block animate__animated animate__fadeInRight wow">
                         <img class="naturalist__block__img" src="./images/low_img3.png" alt="plate_picture">
                         <p class="naturalist__block__title">Food For Your Skin: A Diet To Achieve Glowing Skin For Your Skin Type</p>
                         <p class="naturalist__block__date">Aug 28, 2020</p>
@@ -172,10 +173,7 @@
                 </div>
             </div>
         </section>
-          
     </main>
-
-
 
     <footer class="footer page__footer">
         <div class="footer__info">
@@ -209,6 +207,7 @@
            <a href="#"><img src="./icons/comp9.png" alt="partner_9"></a> 
         </div>
     </footer>
-
+    <script src="wow.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
